argocd-k8s-manifests/apps/kong/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kong-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: kong-service
  template:
    metadata:
      labels:
        app: kong-service
    spec:
      containers:
        - name: kong
          image: kong-expense-tracker:latest
          ports:
            - containerPort: 8000
            - containerPort: 8001
            - containerPort: 8443
            - containerPort: 8444
          volumeMounts:
            - name: kong-config
              mountPath: /usr/local/kong/declarative/kong.yaml
              subPath: kong.yaml
            - name: kong-plugins
              mountPath: /usr/local/share/lua/5.1/kong/plugins/custom-auth
      volumes:
        - name: kong-config
          configMap:
            name: kong-config
        - name: kong-plugins
          configMap:
            name: kong-plugins
